changes to fix any overlap on different screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,7 @@ text-transform: uppercase;
 }
 .row{
     justify-content: space-around;
+    --bs-gutter-x: 0;
 }
 
 #resource-content1-2{
@@ -167,7 +168,7 @@ text-transform: uppercase;
     background-position: center;
     background-size: cover;
     width: 100%;
-    height:40rem;
+    height:45rem;
     overflow: hidden;
 }
 
@@ -189,7 +190,7 @@ text-transform: uppercase;
 #send-button{
     padding: 0.8rem;
     border-radius: 8rem;
-    background-color: green;
+    background-color: var(--dark-moss-green);
 }
 .form-control:hover{
     border-color: black;
